--- a/index.html
+++ b/index.html
@@ -1,33 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | NFT preview card component</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
-
-  Equilibrium #3429
-
-  Our Equilibrium collection promotes balance and calm.
-
-  0.041 ETH
-  3 days left
-  
-  Creation of Jules Wyvern
-
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png" />
+    <link rel="stylesheet" href="css/main.css" />
+    <title>Frontend Mentor | NFT preview card component</title>
+  </head>
+  <body>
+    <main class="card">
+      <a href="#"><img class="card__main-image" src="images/image-equilibrium.jpg" alt="equilibrium image" /></a>
+      <h1 class="card__title"><a href="#">Equilibrium #3429</a></h1>
+      <p class="card__text">Our Equilibrium collection promotes balance and calm.</p>
+      <div class="card__balance-and-time-left">
+        <div class="card__balance">
+          <img class="card__balance-img" src="images/icon-ethereum.svg" alt="ethereum icon" />
+          <p class="card__balance-text">0.041 ETH</p>
+        </div>
+        <div class="card__time-left">
+          <img class="card__time-left-img" src="images/icon-clock.svg" alt="clock icon" />
+          <p class="card__time-left-text">3 days left</p>
+        </div>
+      </div>
+      <hr />
+      <div class="card__creator">
+        <img class="card__creator-avatar" src="images/image-avatar.png" alt="avatar image" />
+        <p class="card__creator-text">Creation of <a href="#">Jules Wyvern</a></p>
+      </div>
+    </main>
+  </body>
 </html>
