--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   </head>
   <body>
     <main class="card">
-      <a href="#"><img class="card__main-image" src="images/image-equilibrium.jpg" alt="equilibrium image" /></a>
-      <h1 class="card__title"><a href="#">Equilibrium #3429</a></h1>
+      <a class="card__link" href="#"><img class="card__main-image" src="images/image-equilibrium.jpg" alt="equilibrium image" /></a>
+      <h1 class="card__title"><a class="card__link" href="#">Equilibrium #3429</a></h1>
       <p class="card__text">Our Equilibrium collection promotes balance and calm.</p>
       <div class="card__balance-and-time-left">
         <div class="card__balance">
@@ -22,10 +22,10 @@
           <p class="card__time-left-text">3 days left</p>
         </div>
       </div>
-      <hr />
+      <hr class="card__hr" />
       <div class="card__creator">
         <img class="card__creator-avatar" src="images/image-avatar.png" alt="avatar image" />
-        <p class="card__creator-text">Creation of <a href="#">Jules Wyvern</a></p>
+        <p class="card__creator-text">Creation of <a class="card__link" href="#">Jules Wyvern</a></p>
       </div>
     </main>
   </body>
