--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
   </head>
   <body>
     <main class="card">
-      <a class="card__link" href="#"><img class="card__main-image" src="images/image-equilibrium.jpg" alt="equilibrium image" /></a>
+      <a class="card__link" href="#">
+        <div class="card__main-img">
+          <img class="card__main-img-top" src="images/icon-view.svg" alt="view icon" />
+          <img class="card__main-img-bg" src="images/image-equilibrium.jpg" alt="equilibrium image" />
+        </div>
+      </a>
       <h1 class="card__title"><a class="card__link" href="#">Equilibrium #3429</a></h1>
       <p class="card__text">Our Equilibrium collection promotes balance and calm.</p>
       <div class="card__balance-and-time-left">
